# aioli-guestbook-example

./: .gitignore  README.md  pyproject.toml
aioli_guestbook/: __init__.py  config.py  controller.py  database.py  schema.py
aioli_guestbook/service/: __init__.py  visit.py  visitor.py
docs/: Makefile  conf.py  index.rst  requirements.txt  services.rst  webapis.rst
docs/_static/: custom.css
docs/pages/: usage.rst
docs/setup/: configure.rst  deploy.rst  install.rst
