[tool.poetry]
name = "aioli-guestbook"
version = "0.1.0"
description = ""
authors = ["Robert Wikman <rbw@vault13.org>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
aioli = { git = "https://github.com/aioli-framework/aioli.git", branch = "devel" }
aioli_rdbms = { git = "https://github.com/aioli-framework/aioli-rdbms.git", branch = "master" }
toml = "^0.10.0"
maxminddb-geolite2 = "^2018.703"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
