[tool.poetry]
name = "aioli_guestbook"
version = "0.1.4"
description = "Comprehensive RESTful HTTP API built on top of the Aioli Framework"
authors = ["Robert Wikman <rbw@vault13.org>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/aioli-framework/aioli-guestbook-example"

[tool.poetry.dependencies]
python = "^3.6"
aioli = "^0.3.1"
aioli_rdbms = "^0.1.3"
toml = "^0.10.0"
maxminddb-geolite2 = "^2018.703"

[tool.poetry.dev-dependencies]
twine = "^1.13"
sphinx = "^2.1.1"
sphinxcontrib-httpdomain = "^1.7.0"
pytest = "^4.4.0"
pytest-cov = "^2.7.1"
autoflake = "^1.3"
codecov = "^2.0.15"
black = { version = "^19.3b0", allows-prereleases = true }

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
